fixed line spacing and pointer

--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -15,9 +15,11 @@
     align-items: center;
     text-align: left;
     p {
-      line-height: 1.5;
-      font-size: 0.7rem;
+      line-height: 1.9;
+      letter-spacing: 0.6px;
+      font-size: 0.8rem;
       padding: 0 10%  20px 10%;
+
     }
   
   }
