--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -24,7 +24,9 @@
     }
     p {
       padding: 0 10%  20px 10%;
-      line-height: 1.5; 
+      line-height: 1.7; 
+      letter-spacing: 0.8;
+      font-size: 0.8rem;
     }
     button {
       font-size: 0.6rem;
